--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="loginLine"></div>
 
         <input  class="loginBoxButton" type="button" value="Crear Cuenta Nueva">
-        <a href="privacyPolitics.html" class="loginBoxLink">Política de Privacidad</a>
+        <a href="privacyPolitics.html" class="loginBoxLink">Políticas de Privacidad</a>
     </form>
 </body>
 </html>
