--- a/privacyPolitics.html
+++ b/privacyPolitics.html
@@ -3,9 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Políticas de Privacidad</title>
+    <title>Políticas de Privacidad - Movies & More</title>
+
+    <!-- * Stylesheets -->
+    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/privacyPolitics.css">
+    <link rel="shortcut icon" href="assets/icons/popcorns_logo.png">
 </head>
 <body>
-    FUNCIONA
+    <div class="boxText">
+        <div class="boxTextTitle">Políticas de Privacidad</div>
+        <div class="boxTextBody">
+            1.	Los datos que el usuario brinde como su correo y contraseña no serán utilizados con ningún fin para dañar su integridad y serán cifrados física y electrónicamente.<br><br>
+            2.	El usuario confirma la recopilación de datos para lograr mejorar su experiencia en nuestro sitio web.<br><br>
+            3.	Todas las claves serán única y solamente de el usuario registrado, y compartir datos como sus contraseñas serán su responsabilidad.<br><br>
+            4.	Sus datos no serán distribuidos ni arrendará esta información a terceros.<br><br>
+            5.	El usuario permitirá el uso Cookies para rastrear y almacenar sus preferencias mientras usan el sitio web.<br><br>
+            6.	El sitio web no está dirigido a menores de edad y no recopilamos ni conservamos datos personales a sabiendas sobre personas menores de 13 años.<br><br>
+            7.	Cualquier actualización a esta Política se publicará en esta página. Si los cambios son significativos, también podemos optar por enviar un correo electrónico a todos nuestros usuarios registrados con los nuevos detalles. <br><br>
+            8.	Si tiene preguntas o comentarios sobre esta Política de Privacidad, puede contactarnos a mapadelen0nes@gmail.com, estaremos siempre disponibles para poder.<br><br>
+            9.	La información que recopilamos en el registro de el usuario son los siguientes:<br><br>
+            •	Nombres y apellidos<br><br>
+            •	Correo electrónico<br><br>
+            •	Números de teléfono<br><br>
+            •	Domicilio<br><br>
+            •	Estado civil<br><br>
+            •	Situación económica<br><br>
+        </div>
+    </div>
+    <a href="index.html">
+        <img src="assets/icons/return.png" alt="" class="btnReturn">
+
+    </a>
+
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
