--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <title>Iniciar Sesión - Movies & More</title>
 
     <!-- * Stylesheets -->
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/styles.css" type="text/css" media="screen">
     <link rel="shortcut icon" href="assets/icons/popcorns_logo.png">
 </head>
 <body>
