--- a/privacyPolitics.html
+++ b/privacyPolitics.html
@@ -6,8 +6,8 @@
     <title>Políticas de Privacidad - Movies & More</title>
 
     <!-- * Stylesheets -->
-    <link rel="stylesheet" href="assets/css/styles.css">
-    <link rel="stylesheet" href="assets/css/privacyPolitics.css">
+    <link rel="stylesheet" href="assets/css/styles.css" type="text/css" media="screen">
+    <link rel="stylesheet" href="assets/css/privacyPolitics.css" type="text/css" media="screen">
     <link rel="shortcut icon" href="assets/icons/popcorns_logo.png">
 </head>
 <body>
