--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
     <!-- * Stylesheets -->
     <link rel="stylesheet" href="assets/css/styles.css" type="text/css" media="screen">
+    <link rel="stylesheet" href="assets/css/index.css" type="text/css" media="screen">
     <link rel="shortcut icon" href="assets/icons/popcorns_logo.png">
 </head>
 <body>
@@ -38,7 +39,10 @@
         <div class="loginLine"></div>
 
         <input  class="loginBoxButton" type="button" value="Crear Cuenta Nueva">
-        <a href="privacyPolitics.html" class="loginBoxLink">Políticas de Privacidad</a>
+        <div class="linksBox">
+            <a href="privacyPolitics.html" class="loginBoxLink">Políticas de Privacidad</a>
+            <a href="conditions.html" class="loginBoxLink">Términos y Condiciones</a>
+        </div>
     </form>
 </body>
 </html>
