--- a/sessionStarted.html
+++ b/sessionStarted.html
@@ -15,6 +15,8 @@
             <img class="logedImg" src="assets/icons/like.png" alt="">
         </div>
         <div class="logedTitle">¡Sesión Iniciada!</div>
+        <div class="logedWelcome"></div>
     </div>
+    <script src="assets/js/session.js"></script>
 </body>
 </html>
