--- a/sessionStarted.html
+++ b/sessionStarted.html
@@ -8,6 +8,7 @@
     <!-- * Stylesheets -->
     <link rel="stylesheet" href="assets/css/styles.css" type="text/css" media="screen">
     <link rel="stylesheet" href="assets/css/sessionStarted.css" type="text/css" media="screen">
+    <link rel="shortcut icon" href="assets/icons/popcorns_logo.png">
 </head>
 <body>
     <div class="logedBox">
