--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
         <div class="loginLine"></div>
 
-        <input class="loginBoxButton" type="button" value="Crear Cuenta Nueva">
+        <input class="loginBoxButton" type="button" value="Crear Cuenta Nueva" onclick="travelTo('createAccount.html')">
 
         <div class="linksBox">
             <a href="privacyPolitics.html" class="loginBoxLink">Políticas de Privacidad</a>
@@ -53,6 +53,7 @@
         </div>
     </form>
 
+    <script src="assets/js/accounts.js"></script>
     <script src="assets/js/script.js"></script>
 </body>
 </html>
