--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
             <input maxlength="50" class="loginBoxTxt" type="password" name="" id="password" placeholder="Contraseña" autocomplete="current-password">
         </div>
         
+        <a href="" class="loginBoxLink">¿Olvidaste tu Contraseña?</a>
+
         <label for="loginCheckRemember" id="loginRememberBox">
             <input type="checkbox" name="" id="loginCheckRemember">
             Recordar Correo Electrónico
@@ -53,7 +55,6 @@
         </div>
     </form>
 
-    <script src="assets/js/accounts.js"></script>
     <script src="assets/js/script.js"></script>
 </body>
 </html>
